# phil-encyclopedia

./: .gitignore  README.md  pyproject.toml  review_article.json
apps/web/: app.js  index.html  styles.css
docs/: pipeline_architecture.md
src/phil_encyclopedia/: __init__.py  cli.py  config.py  crawler.py  db.py  models.py  openai_batch.py  parser.py  prompt.py  qa.py  rate_limit.py  raw_cache.py  sep_urls.py
src/phil_encyclopedia/input/: __init__.py  crawler.py  parser.py  rate_limit.py  raw_cache.py  sep_urls.py
src/phil_encyclopedia/processing/: __init__.py  cost_estimate.py  models.py  openai_batch.py  prompt.py  qa.py
src/phil_encyclopedia/storage/: __init__.py  db.py  schema.sql
tests/input/: __init__.py  test_parser.py  test_rate_limit.py  test_sep_urls.py
tests/processing/: __init__.py  test_batch_chunking.py  test_batch_import.py  test_cost_estimate.py  test_models.py  test_prompt.py  test_qa.py  test_schema.py
tests/storage/: __init__.py  test_db_queries.py
