[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phil-encyclopedia"
version = "0.1.0"
description = "SEP-inspired youth philosophy encyclopedia ingestion and generation pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "openai>=1.40",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "respx>=0.21",
]

[project.scripts]
phil-encyclopedia = "phil_encyclopedia.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
